--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@octokit/app": "^14.0.0",
     "@octokit/rest": "^20.0.0",
     "@octokit/webhooks": "^12.0.0",
+    "@vercel/kv": "^3.0.0",
     "commander": "^10.0.0",
     "express": "^4.18.0"
   },
