--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
     "husky": "^9.1.7",
     "jest": "^29.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
