--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
+    - name: Install uv
+      run: pip install uv
     - name: Install Node dependencies
       run: npm install
     - name: Install Python dependencies
-      run: pip install -r core/model/requirements.txt
+      run: uv pip install -r core/model/requirements.txt
     - name: Run checks
       run: npm run check
     - name: Build Docker image
