--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
       run: npm install
     - name: Install Python dependencies
       run: uv pip install --system -r core/model/requirements.txt
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.21'
+    - name: Run Go tests
+      run: cd go && go test ./...
     - name: Run checks
       run: npm run check
     - name: Build Docker image
