--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "commander": "^10.0.0",
     "express": "^5.1.0"
   },
+  "optionalDependencies": {
+    "evdev": "^0.3.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
@@ -48,7 +51,7 @@
     "keystroke"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "jest": {
     "preset": "ts-jest"
   }
