--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       uses: actions/setup-go@v6.1.0
       with:
         go-version: '1.21'
+        cache: false
     - name: Run Go tests
       run: cd go && go test ./...
     - name: Run checks
