--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,14 @@ repos:
   - id: end-of-file-fixer
   - id: check-yaml
   - id: check-added-large-files
+- repo: https://github.com/adrienverge/yamllint.git
+  rev: v1.35.1
+  hooks:
+  - id: yamllint
+- repo: https://github.com/rhysd/actionlint
+  rev: v1.7.9
+  hooks:
+  - id: actionlint
 - repo: https://github.com/pre-commit/mirrors-prettier
   rev: v4.0.0-alpha.8
   hooks:
@@ -15,32 +23,32 @@ repos:
     files: \.(js|ts|json|md)$
 - repo: local
   hooks:
-  - id: lint
-    name: ESLint
-    entry: npx eslint . --ext .ts
-    language: system
-    pass_filenames: false
-  - id: tsc
-    name: TypeScript compiler
-    entry: npx tsc --noEmit
-    language: system
-    pass_filenames: false
-  - id: test
-    name: Run tests
-    entry: npm test
-    language: system
-    pass_filenames: false
-  - id: commit-msg-check
-    name: Check commit message
-    entry: |
-      if [ $(wc -w < "$1") -gt 3 ]; then
-        echo "Commit message too long: $(wc -w < "$1") words (max 3)"
-        exit 1
-      fi
-      if ! grep -q "\`" "$1"; then
-        echo "Commit message must contain backticks for code references"
-        exit 1
-      fi
-    language: system
-    stages: [commit-msg]
-    pass_filenames: false
+    - id: lint
+      name: ESLint
+      entry: npx eslint . --ext .ts
+      language: system
+      pass_filenames: false
+    - id: tsc
+      name: TypeScript compiler
+      entry: npx tsc --noEmit
+      language: system
+      pass_filenames: false
+    - id: test
+      name: Run tests
+      entry: npm test
+      language: system
+      pass_filenames: false
+    - id: commit-msg-check
+      name: Check commit message
+      entry: |
+        if [ $(wc -c < "$1") -gt 30 ]; then
+          echo "Commit message too long: $(wc -c < "$1") characters (max 30)"
+          exit 1
+        fi
+        if ! grep -q "\`" "$1"; then
+          echo "Commit message must contain backticks for code references"
+          exit 1
+        fi
+      language: system
+      stages: [commit-msg]
+      pass_filenames: false
