--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         python-version: '3.14'
     - name: Install uv
       run: pip install uv
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y libblas-dev liblapack-dev
     - name: Install Node dependencies
       run: npm install
     - name: Install Python dependencies
