--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install uv
       run: pip install uv
     - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y libblas-dev liblapack-dev
+      run: sudo apt-get update && sudo apt-get install -y libopenblas-dev liblapack-dev
     - name: Install Node dependencies
       run: npm install
     - name: Install Python dependencies
