--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y libopenblas-dev liblapack-dev
     - name: Install Node dependencies
       run: npm install
+    - name: Audit dependencies
+      run: npm audit --audit-level=moderate
     - name: Install Python dependencies
       run: uv pip install --system -r core/model/requirements.txt
     - name: Install yamllint
