fix(workflow): fetch full history for git describe in release-check `maintenance.yml`

--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -60,6 +60,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch all history for git describe
     - name: Install jq for JSON processing
       run: which jq || sudo apt-get update && sudo apt-get install -y jq
     - name: List recent releases via GitHub API
