--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,33 +18,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Lint GitHub Actions
       uses: reviewdog/action-actionlint@v1
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Setup Environment
+      uses: ./.github/actions/setup-environment
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: 'package-lock.json'
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
         python-version: '3.14'
-    - name: Install uv
-      run: pip install uv
-    - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y libopenblas-dev liblapack-dev
-    - name: Install Node dependencies
-      run: npm install
-    - name: Audit dependencies
-      run: npm audit --audit-level=moderate
-    - name: Install Python dependencies
-      run: uv pip install --system -r core/model/requirements.txt
-    - name: Install yamllint
-      run: pip install yamllint
-    - name: Setup Go
-      uses: actions/setup-go@v6.1.0
-      with:
         go-version: '1.21'
-        cache: false
     - name: Run Go tests
       run: cd go && go test ./...
     - name: Lint
