--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "cors": "^2.8.5",
     "escape-html": "^1.0.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^8.2.1",
+    "marked": "^17.0.1"
   },
   "optionalDependencies": {
     "evdev": "^0.3.0",
