--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,26 +20,23 @@ jobs:
       run: |
         git config user.name 'github-actions[bot]'
         git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-    - name: Get version
+    - name: Increment version
       run: |
-        version="$(cat VERSION)"
-        echo "VERSION=${version}" >> "$GITHUB_ENV"
-        echo "TAG=${version}" >> "$GITHUB_ENV"
-    - name: Check if tag exists
-      id: check_tag
-      run: |
-        if git rev-parse ${{ env.TAG }} >/dev/null 2>&1; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-        fi
+        last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.1.3")
+        IFS='.' read -r major minor patch <<< "$last_tag"
+        new_patch=$((patch + 1))
+        new_version="${major}.${minor}.${new_patch}"
+        echo "$new_version" > VERSION
+        git add VERSION
+        git commit -m "chore: bump version to ${new_version}"
+        git push
+        echo "VERSION=${new_version}" >> "$GITHUB_ENV"
+        echo "TAG=${new_version}" >> "$GITHUB_ENV"
     - name: Push tag
-      if: steps.check_tag.outputs.exists == 'false'
       run: |
         git tag ${{ env.TAG }}
         git push origin ${{ env.TAG }}
     - name: Create release
-      if: steps.check_tag.outputs.exists == 'false'
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
