--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,12 +69,10 @@ jobs:
         git tag ${{ env.TAG }}
         git push origin ${{ env.TAG }}
     - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ env.TAG }}
-        release_name: ${{ github.event.pull_request.title }}
+        name: ${{ github.event.pull_request.title }}
         body: ${{ github.event.pull_request.body }}
         draft: false
         prerelease: false
