--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ permissions:
   pull-requests: write
   issues: write
 on:
-  pull_request:
+  pull_request_target:
     types: [closed]
     branches: [main]
 
