--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,6 @@ permissions:
   issues: write
 on:
   pull_request_target:
-    types: [closed]
-    branches: [main]
 
 jobs:
   bump-version:
@@ -24,21 +22,21 @@ jobs:
         git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
     - name: Increment version
       run: |
-        last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.1.3")
+        last_tag="$(git describe --tags --abbrev=0 2>/dev/null || echo "0.1.3")"
         IFS='.' read -r major minor patch <<< "$last_tag"
         # Validate version components are numbers
         if ! [[ "$major" =~ ^[0-9]+$ ]] || ! [[ "$minor" =~ ^[0-9]+$ ]] || ! [[ "$patch" =~ ^[0-9]+$ ]]; then
           echo "Invalid version format: $last_tag, defaulting to 0.1.4"
           new_version="0.1.4"
         else
-          new_patch=$((patch + 1))
+          new_patch="$((patch + 1))"
           new_version="${major}.${minor}.${new_patch}"
         fi
         echo "$new_version" > VERSION
         git add VERSION
         git commit -m "chore: bump version to ${new_version}"
-        git checkout -b version-bump-${new_version}
-        git push -u origin version-bump-${new_version} --force
+        git checkout -b "version-bump-${new_version}"
+        git push -u origin "version-bump-${new_version}" --force
         echo "VERSION=${new_version}" >> "$GITHUB_ENV"
     - name: Create version bump PR
       uses: peter-evans/create-pull-request@v6
