--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@types/cors": "^2.8.19",
     "@types/escape-html": "^1.0.4",
-    "@types/express": "^5.0.5",
+    "@types/express": "^5.0.6",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@types/supertest": "^6.0.3",
