--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "organic-typing",
   "version": "0.1.0",
   "description": "Captures human typing signals to build organic signatures",
+  "type": "module",
   "main": "ux/cli/organic-cli.ts",
   "scripts": {
     "build": "tsc",
     "start": "node dist/ux/cli/organic-cli.js",
-    "dev": "ts-node ux/cli/organic-cli.ts",
+    "dev": "tsx ux/cli/organic-cli.ts",
     "server": "ts-node ux/github-app/server.ts",
     "test": "jest",
     "test:unit": "jest tests/unit",
@@ -46,6 +47,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   },
   "keywords": [
@@ -57,6 +59,13 @@
   "author": "",
   "license": "BSD-3-Clause",
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@octokit/webhooks)"
+    ]
   }
 }
