--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "organic-typing",
-  "version": "v0.1.3",
+  "version": "0.1.0",
   "description": "Captures human typing signals to build organic signatures",
+  "type": "module",
   "main": "ux/cli/organic-cli.ts",
   "scripts": {
     "build": "tsc",
     "start": "node dist/ux/cli/organic-cli.js",
-    "dev": "ts-node ux/cli/organic-cli.ts",
+    "dev": "tsx ux/cli/organic-cli.ts",
     "server": "ts-node ux/github-app/server.ts",
     "test": "jest",
     "test:unit": "jest tests/unit",
@@ -24,9 +25,8 @@
     "@vercel/kv": "^3.0.0",
     "commander": "^14.0.2",
     "cors": "^2.8.5",
-    "escape-html": "^1.0.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^7.5.1"
   },
   "optionalDependencies": {
     "evdev": "^0.3.0"
@@ -36,9 +36,9 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@types/cors": "^2.8.19",
     "@types/escape-html": "^1.0.4",
-    "@types/express": "^5.0.5",
+    "@types/express": "^4.17.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.10.1",
+    "@types/node": "^18.0.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -48,6 +48,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   },
   "keywords": [
@@ -60,6 +61,12 @@
   "license": "BSD-3-Clause",
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@octokit/webhooks)"
+    ]
   }
 }
