fix(ci): resolve `pre-commit` hook issues and update `ESLint` config

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "audit": "npm audit",
     "check": "npm run lint && npm run build && npm run test && npm run audit",
     "prepare": "husky install"
@@ -45,7 +45,8 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
