--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -80,8 +80,7 @@ jobs:
       run: |
         git config user.name 'github-actions[bot]'
         git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        latest_tag=$(git tag | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -1 || echo "0.0.0")
-        latest_tag=${latest_tag#v}
+        latest_tag=$(git tag | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+$' | sed 's/^v//' | sort -V | tail -1 || echo "0.0.0")
         echo "Latest tag: $latest_tag"
         # Simple semver bump logic (patch)
         IFS='.' read -r major minor patch <<< "$latest_tag"
