fix(ci): update `release.yml` to trigger on push to main for version bumps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,62 +1,20 @@
 # SPDX-License-Identifier: BSD-3-Clause
-# Release workflow for automated tagging and releasing on PR merge
+# Release workflow for automated tagging and releasing on version bump merge
 name: Release
 permissions:
   contents: write
-  pull-requests: write
-  issues: write
 on:
-  pull_request_target:
+  push:
+    branches: [main]
 
 jobs:
-  bump-version:
-    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.head_ref, 'version-bump')
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Configure git
-      run: |
-        git config user.name 'github-actions[bot]'
-        git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-    - name: Increment version
-      run: |
-        last_tag="$(git describe --tags --abbrev=0 2>/dev/null || echo "0.1.3")"
-        IFS='.' read -r major minor patch <<< "$last_tag"
-        # Validate version components are numbers
-        if ! [[ "$major" =~ ^[0-9]+$ ]] || ! [[ "$minor" =~ ^[0-9]+$ ]] || ! [[ "$patch" =~ ^[0-9]+$ ]]; then
-          echo "Invalid version format: $last_tag, defaulting to 0.1.4"
-          new_version="0.1.4"
-        else
-          new_patch="$((patch + 1))"
-          new_version="${major}.${minor}.${new_patch}"
-        fi
-        echo "$new_version" > VERSION
-        git add VERSION
-        git commit -m "chore: bump version to ${new_version}"
-        git checkout -b "version-bump-${new_version}"
-        git push -u origin "version-bump-${new_version}" --force
-        echo "VERSION=${new_version}" >> "$GITHUB_ENV"
-    - name: Create version bump PR
-      uses: peter-evans/create-pull-request@v6
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: version-bump-${{ env.VERSION }}
-        title: "chore: bump version to ${{ env.VERSION }}"
-        body: "Automated version bump to ${{ env.VERSION }} after PR merge."
-        base: main
   release:
-    if: github.event.pull_request.merged == true && contains(github.event.pull_request.head_ref, 'version-bump')
+    if: contains(github.event.head_commit.message, 'bump version')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Configure git
-      run: |
-        git config user.name 'github-actions[bot]'
-        git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
     - name: Get version
       run: |
         version="$(cat VERSION)"
@@ -70,7 +28,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ env.TAG }}
-        name: ${{ github.event.pull_request.title }}
-        body: ${{ github.event.pull_request.body }}
+        name: Release ${{ env.TAG }}
+        body: Automated release for version ${{ env.TAG }}
         draft: false
         prerelease: false
