--- a/.github/actions/create-version-pr/action.yml
+++ b/.github/actions/create-version-pr/action.yml
@@ -30,4 +30,4 @@ runs:
           ```
         branch: version-bump
         base: main
-        update-pull-request-branch: always
+        update-pull-request-branch: true
